# nvimopen

./: Cargo.toml  README.md  build.rs
assets/: nvimopen-icon.odg
src/: main.rs
